--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@400;500;600;700&display=swap");
-
+@import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,400,600|Tulpen+One&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -146,6 +146,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   .background{
     height: 400px;
   }
+
 }
 
 
@@ -161,4 +162,240 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   100%{
     top: 50%;
   }
+}
+.btn1 {
+  border: none;
+  display: block;
+  text-align: center;
+  cursor: pointer;
+  text-transform: uppercase;
+  outline: none;
+  overflow: hidden;
+  position: relative;
+  color: #fff;
+  font-weight: 700;
+  font-size: 15px;
+  background-color: #1c1c24;
+  padding: 17px 60px;
+  margin: 0 auto;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.20);
+}
+
+.btn1 span {
+  position: relative; 
+  z-index: 1;
+}
+
+.btn1:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 490%;
+  width: 140%;
+  background: #8c6dfd;
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  -webkit-transform: translateX(-98%) translateY(-25%) rotate(45deg);
+  transform: translateX(-98%) translateY(-25%) rotate(45deg);
+}
+
+.btn1:hover:after {
+  -webkit-transform: translateX(-9%) translateY(-25%) rotate(45deg);
+  transform: translateX(-9%) translateY(-25%) rotate(45deg);
+}
+
+
+
+:root {
+	/* colors */
+	 --body-bg: #d9d9d9;
+	 --page-bg: #d9d9d9;
+	 --dark-text: #000000;
+
+	/* spacing */
+	/* this is what defines the global scale */
+	 --baseline: 12px;
+	/* fonts */
+	 --book-title: 'Tulpen One', sans-serif;
+	 --title: 'Cormorant Garamond', serif;
+	 --body: 'Cormorant Garamond', serif;
+	 --base-size: var(--baseline) * 2;
+}
+.box1 {
+  box-sizing: border-box;
+}
+
+ 
+.cover {
+  margin: auto;
+	 width: calc(var(--baseline) * 90);
+	 height: calc(var(--baseline) * 42.6*1.5);
+	 box-shadow: 0 0 100px rgba(0, 0, 0, .3);
+}
+ .book {
+	 width: 100%;
+	 height: 100%;
+	 display: flex;
+	 perspective: 1200px;
+
+}
+ .book__page {
+	 position: relative;
+	 width: 50%;
+	 height: 100%;
+	 display: grid;
+	 transform: rotateY(0deg);
+	 transition: transform 0.9s cubic-bezier(0.645, 0.045, 0.355, 1);
+	 transform-origin: 0% 0%;
+	 background-color: var(--page-bg);
+	 background-image: linear-gradient(90deg, rgb(158, 158, 158) 0%, rgba(234, 234, 234, 0) 18%);
+}
+ .book__page:nth-of-type(1) {
+	 background-image: linear-gradient(-90deg, rgb(158, 158, 158) 0%, rgba(247, 247, 247, 0) 18%);
+}
+ .book__page--1 {
+	 cursor: pointer;
+	 overflow: hidden;
+
+}
+
+
+ .book__page--1 img {
+	 width: 100%;
+
+	 height: 100%;
+   filter: brightness(80%);
+   object-fit: cover;
+   object-position: 50% 50%;
+   cursor: pointer;
+   transition:.5s ease-in-out;
+}
+ .book__page--2 {
+	 position: absolute;
+	 right: 0;
+	 pointer-events: none;
+	 transform-style: preserve-3d;
+	 background-color: var(--page-bg);
+	 background-image: linear-gradient(90deg,rgb(158, 158, 158) 0% 0%, rgba(247, 247, 247, 0) 18%);
+}
+ .book__page--4 {
+	 cursor: pointer;
+	 padding: 0 calc(var(--baseline) * 3);
+}
+ .book__page-front {
+	 position: absolute;
+	 width: 100%;
+	 height: 100%;
+	 transform: rotateY(0deg) translateZ(1px);
+}
+ .book__page-back {
+	 position: absolute;
+	 width: 100%;
+	 height: 100%;
+	 padding: 0 calc(var(--baseline) * 1.8);
+	 transform: rotateY(180deg) translateZ(1px);
+}
+ .book__page .page__content {
+	 padding: var(--baseline);
+	 height: 100%;
+	 position: relative;
+	 text-align: center;
+}
+ .book__page .page__content-book-title {
+	 font-family: var(--book-title);
+	 font-size: calc(var(--base-size) * 3);
+	 font-weight: bold;
+	 text-transform: uppercase;
+	 letter-spacing: 3px;
+	 color: var(--dark-text);
+	 margin-top: calc(var(--baseline) * 5);
+	 margin-bottom: calc(var(--baseline) * 2);
+}
+ .book__page .page__content-author {
+	 font-family: var(--title);
+	 font-size: calc(var(--base-size) * 1.2);
+	 font-weight: 100;
+	 text-transform: uppercase;
+	 color: var(--dark-text);
+	 border-top: 1px solid var(--dark-text);
+	 border-bottom: 1px solid var(--dark-text);
+	 display: inline-block;
+	 padding: calc(var(--baseline) / 2) calc(var(--baseline) / 5);
+	 margin-bottom: calc(var(--baseline) * 6);
+}
+ .book__page .page__content-credits {
+	 font-family: var(--title);
+	 text-transform: uppercase;
+	 font-size: calc(var(--base-size) * 0.8);
+	 margin-bottom: calc(var(--baseline) * 2);
+	 letter-spacing: 1px;
+}
+ .book__page .page__content-credits span {
+	 display: block;
+	 font-size: calc(var(--base-size) * 1.2);
+	 letter-spacing: 0;
+}
+ .book__page .page__content-copyright {
+	 position: absolute;
+	 width: calc(100% - (var(--baseline) * 2));
+	 bottom: calc(var(--baseline) * 2);
+	 font-family: var(--title);
+	 font-size: calc(var(--base-size) * 0.8);
+	 text-transform: uppercase;
+}
+ .book__page .page__content-title {
+	 font-family: var(--title);
+	 font-size: calc(var(--base-size) * 1);
+	 text-transform: uppercase;
+	 letter-spacing: 1px;
+	 margin-top: calc(var(--baseline) * 5);
+	 margin-bottom: calc(var(--baseline) * 3);
+}
+ .book__page .page__content-table {
+	 width: 100%;
+	 margin-top: calc(var(--baseline) * 2);
+}
+ .book__page .page__content-table td {
+	 font-family: var(--title);
+	 font-size: calc(var(--base-size) * 1);
+	 padding-bottom: calc(var(--baseline) * 1.5);
+	 text-transform: uppercase;
+}
+ .book__page .page__content-blockquote {
+	 margin-bottom: calc(var(--baseline) * 2);
+}
+ .book__page .page__content-blockquote-text {
+	 font-family: var(--title);
+	 font-size: calc(var(--base-size) * 0.67);
+	 font-style: italic;
+	 text-align: justify;
+}
+ .book__page .page__content-blockquote-reference {
+	 font-family: var(--title);
+	 font-size: calc(var(--base-size) * 0.7);
+	 margin-top: calc(var(--baseline) * 0.3);
+	 float: right;
+	 text-transform: uppercase;
+}
+ .book__page .page__content-text {
+	 font-family: var(--title);
+	 font-size: calc(var(--base-size) * 0.67);
+	 text-align: justify;
+	 text-indent: var(--baseline);
+}
+ .book__page .page__number {
+	 position: absolute;
+	 bottom: var(--baseline);
+	 width: calc(100% - (var(--baseline) * 2));
+	 font-family: var(--title);
+	 font-size: calc(var(--base-size) * 0.67);
+	 text-align: center;
+}
+ .book input[type="radio"] {
+	 display: none;
+}
+ .book input[type="radio"]:checked + .book__page {
+	 transition: transform 0.9s cubic-bezier(0.645, 0.045, 0.355, 1);
+	 transform: rotateY(-180deg);
 }
